# GoonBot

./: .gitignore  .pyre_configuration  Cargo.toml  README.md  README_RUST.md  downloader.py  globals.py  goon.py  package-lock.json  package.json  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
src/: bot.rs  index.ts  main.rs  music.rs  utils.rs
src/commands/: leave.ts  music.rs  pause.ts  play.ts  queue.ts  resume.ts  skip.ts  stop.ts
src/types/: index.ts
src/utils/: musicPlayer.ts  queueManager.ts  youtubeUtil.ts
