[package]
name = "goonbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord bot framework - using Poise instead of deprecated standard framework
poise = "0.6"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "voice"] }

# Voice support  
songbird = { version = "0.4", features = ["builtin-queue"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["io"] }

# Error handling
anyhow = "1"

# Thread-safe collections
dashmap = "5"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for YouTube API calls
reqwest = { version = "0.11", features = ["json", "stream"] }

# Regex for URL parsing
regex = "1"

# Random number generation
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# For global state management
lazy_static = "1.4"

# For handling timestamps
chrono = { version = "0.4", features = ["serde"] }

# For generating unique IDs
uuid = { version = "1.0", features = ["v4"] }
